vlib/v/checker/tests/alias_to_generic_err.vv
module main

type Foo = T

fn main() {
}
